--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   - polars=0.20.*
   - pyarrow=12.0.*
   - seaborn=0.13.*
+  - snakemake=8.15.*
   - tqdm=4.65
   - pip:
     - taichi==1.7.*
